src/objects/Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>Cause__c</fullName>
        <description>Cause of the exception</description>
        <label>Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Source of exception – Apex class name</description>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>LineNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_In_User__c</fullName>
        <label>Logged In User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>StackTrace</label>
        <type>TextArea</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Cause__c</columns>
        <columns>Exception_Message__c</columns>
        <columns>LineNumber__c</columns>
        <columns>Logged_In_User__c</columns>
        <columns>StackTrace__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>